--- a/axatproject/AboutUs.css
+++ b/axatproject/AboutUs.css
@@ -35,9 +35,7 @@ body {
   min-width: 100%;
   height: 32rem;
 }
-.carousel-inner{
-  margin-top: 
-}
+
 
 
 /* MARKETING CONTENT
@@ -68,8 +66,12 @@ body {
 .featurette-heading {
   font-weight: 600;
   line-height: 1;
- 
-   font-family: 'Eater', cursive;
+  font-family: 'Eater', cursive;
+}
+
+.img-fluid {
+    width: 100%;
+    height: 100%;
 }
 
 
@@ -86,13 +88,19 @@ body {
 
   .featurette-heading {
     font-size: 50px;
+    margin-top:10px;
   }
 }
 
 @media (min-width: 62em) {
   .featurette-heading {
-    margin-top: 7rem;
+    margin-top: 1rem;
   }
+}
+.col-md-7 .col-md-5{
+  height: 100%;
+  width: 100%;
+  padding: 1px 0 1px 0;
 }
 .container-full{
   background-color: blue;
@@ -100,8 +108,6 @@ body {
   height: 100%;
   margin-bottom: 0;
   padding-bottom: 0;
-  
-  
 }
 .container-fluid{
   background-color: #00cc99;
